--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "openbook",
   "version": "1.0.0",
+  "type":"module",
   "description": "***Made by college Students***  --- Just a thing that parses a csv file to then dynamically create api routes that link to the requested file",
   "main": "index.js",
   "scripts": {
@@ -10,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "csv-parser": "^3.0.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "neat-csv": "^7.0.0"
   }
 }
