--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "openbook",
   "version": "1.0.0",
-  "type":"module",
+  "type": "module",
   "description": "***Made by college Students***  --- Just a thing that parses a csv file to then dynamically create api routes that link to the requested file",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv-parse": "^5.5.6",
     "express": "^4.19.2",
     "neat-csv": "^7.0.0"
   }
